src/test/deca/syntax/parser/valid/inst_expr_empty.deca
// Test de parser, instruction est vide

{
    int x = 5;
    ;
}