src/test/deca/syntax/parser/invalid/decl_var_expr_ident_symbole_divide.deca
// Test de parser, l'ident n'est pas valide, un symbole spécial 
// est à la place, ici symbole OR

{
    int / = 5;
}